# SteveAnsibleClaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ansible.cfg  design.md  pyproject.toml
docs/: executive-summary.md  user-guide.md
inventory/: hosts.yml
inventory/group_vars/: all.yml
skills/ansible_copy/: SKILL.md
skills/ansible_copy/assets/: playbook.yml
skills/ansible_copy/scripts/: check.sh  run.sh
skills/ansible_manager/: SKILL.md
skills/ansible_skills_factory/: SKILL.md
src/ansibleclaw/: __init__.py  cli.py  config.py
src/ansibleclaw/builtins/ansible_search/: SKILL.md
src/ansibleclaw/core/: packager.py  parser.py
src/ansibleclaw/templates/: check.sh.j2  playbook.yml.j2  run.sh.j2  skill_template.md
src/ansibleclaw/web/: app.py
src/ansibleclaw/web/static/: style.css
src/ansibleclaw/web/templates/: _module_detail.html  _search_results.html  base.html  generate.html  inventory.html  search.html  skill_detail.html  skills.html
tests/: conftest.py  test_cli.py  test_parser.py  test_template.py  test_web.py
